[package]
name = "ic-metrics-encoder"
authors = ["The Internet Computer Project Developers"]
description = "A library for encoding metrics in Prometheus text exposition format."
version = "1.1.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["internet-computer", "dfinity", "metrics-encoder", "Prometheus"]
documentation = "https://docs.rs/ic-metrics-encoder"
homepage = "https://docs.rs/ic-metrics-encoder"
include = ["src", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/dfinity/metrics-encoder"
